--- a/client/src/app/components/elderly/meals-calendar/meals-calendar.component.css
+++ b/client/src/app/components/elderly/meals-calendar/meals-calendar.component.css
@@ -1,22 +1,11 @@
+.meals-type>div {
+    text-align: center;
+}
+
 .meals-week {
     overflow-y: auto;
 }
 
-.row, .meals-type {
-    display: grid;
-    grid-template-columns: 1fr 2fr 2fr;
-}
-
-.first-column {
-    grid-column: 1;
-}
-
-.second-column {
-    grid-column: 2;
-    text-align: center;
-}
-
-.third-column {
-    grid-column: 3;
+.meals-week>.row>div:not(:first-child) {
     text-align: center;
 }
